syntax = "proto3";

package note;

service NoteService {
  rpc CreateNote(CreateNoteRequest) returns (NoteResponse);
  rpc GetNote(GetNoteRequest) returns (NoteResponse);
  rpc GetUserNotes(GetUserNotesRequest) returns (GetUserNotesResponse);
  rpc UpdateNote(UpdateNoteRequest) returns (NoteResponse);
  rpc DeleteNote(DeleteNoteRequest) returns (DeleteNoteResponse);
}

message CreateNoteRequest {
  string title = 1;
  string content = 2;
  string userId = 3;
  optional string tags = 4;
}

message GetNoteRequest {
  string id = 1;
}

message GetUserNotesRequest {
  string userId = 1;
}

message UpdateNoteRequest {
  string id = 1;
  optional string title = 2;
  optional string content = 3;
  optional string tags = 4;
}

message DeleteNoteRequest {
  string id = 1;
}

message NoteResponse {
  string id = 1;
  string title = 2;
  string content = 3;
  string userId = 4;
  optional string tags = 5;
  string createdAt = 6;
  string updatedAt = 7;
}

message GetUserNotesResponse {
  repeated NoteResponse notes = 1;
}

message DeleteNoteResponse {
  bool success = 1;
}