import { Controller } from '@nestjs/common';
import { GrpcMethod } from '@nestjs/microservices';
import { BaseController } from './base.controller';

/**
 * Note gRPC Controller
 * Handles note-related operations like creation, retrieval, updates, and deletion
 */
@Controller()
export class NoteController extends BaseController {
  // TODO: Inject NoteService when available
  // constructor(private readonly noteService: NoteService) {
  //   super();
  // }

  /**
   * Create a new note
   * @param data - Note creation data (title, content, userId)
   * @returns Created note information
   */
  @GrpcMethod('NoteService', 'CreateNote')
  async createNote(data: any): Promise<any> {
    try {
      this.validateRequired(data, ['title', 'content', 'userId']);
      
      // TODO: Implement actual note creation logic
      // const note = await this.noteService.createNote(data);
      
      // Placeholder response
      return {
        id: 'note_' + Date.now(),
        title: data.title,
        content: data.content,
        userId: data.userId,
        createdAt: new Date().toISOString(),
        updatedAt: new Date().toISOString(),
      };
    } catch (error) {
      this.handleError(error, 'CreateNote');
    }
  }

  /**
   * Get note by ID
   * @param data - Note ID
   * @returns Note information
   */
  @GrpcMethod('NoteService', 'GetNote')
  async getNote(data: any): Promise<any> {
    try {
      this.validateRequired(data, ['id']);
      
      // TODO: Implement actual note retrieval logic
      // const note = await this.noteService.findById(data.id);
      
      // Placeholder response
      return {
        id: data.id,
        title: 'Sample Note',
        content: 'This is a sample note content',
        userId: 'user_123',
        createdAt: '2024-01-01T00:00:00Z',
        updatedAt: '2024-01-01T00:00:00Z',
      };
    } catch (error) {
      this.handleError(error, 'GetNote');
    }
  }

  /**
   * Get all notes for a user
   * @param data - User ID and optional pagination
   * @returns List of user's notes
   */
  @GrpcMethod('NoteService', 'GetUserNotes')
  async getUserNotes(data: any): Promise<any> {
    try {
      this.validateRequired(data, ['userId']);
      
      // TODO: Implement actual note retrieval logic
      // const notes = await this.noteService.findByUserId(data.userId, data.pagination);
      
      // Placeholder response
      return {
        notes: [
          {
            id: 'note_1',
            title: 'First Note',
            content: 'First note content',
            userId: data.userId,
            createdAt: '2024-01-01T00:00:00Z',
            updatedAt: '2024-01-01T00:00:00Z',
          },
          {
            id: 'note_2',
            title: 'Second Note',
            content: 'Second note content',
            userId: data.userId,
            createdAt: '2024-01-02T00:00:00Z',
            updatedAt: '2024-01-02T00:00:00Z',
          },
        ],
        totalCount: 2,
        page: data.page || 1,
        limit: data.limit || 10,
      };
    } catch (error) {
      this.handleError(error, 'GetUserNotes');
    }
  }

  /**
   * Update note content
   * @param data - Note ID and update data
   * @returns Updated note information
   */
  @GrpcMethod('NoteService', 'UpdateNote')
  async updateNote(data: any): Promise<any> {
    try {
      this.validateRequired(data, ['id']);
      
      // TODO: Implement actual note update logic
      // const note = await this.noteService.update(data.id, data);
      
      // Placeholder response
      return {
        id: data.id,
        title: data.title || 'Updated Note',
        content: data.content || 'Updated content',
        userId: data.userId || 'user_123',
        updatedAt: new Date().toISOString(),
      };
    } catch (error) {
      this.handleError(error, 'UpdateNote');
    }
  }

  /**
   * Delete note
   * @param data - Note ID
   * @returns Deletion confirmation
   */
  @GrpcMethod('NoteService', 'DeleteNote')
  async deleteNote(data: any): Promise<any> {
    try {
      this.validateRequired(data, ['id']);
      
      // TODO: Implement actual note deletion logic
      // await this.noteService.delete(data.id);
      
      // Placeholder response
      return {
        success: true,
        message: `Note ${data.id} deleted successfully`,
      };
    } catch (error) {
      this.handleError(error, 'DeleteNote');
    }
  }

  /**
   * Search notes by content
   * @param data - Search query and user ID
   * @returns Matching notes
   */
  @GrpcMethod('NoteService', 'SearchNotes')
  async searchNotes(data: any): Promise<any> {
    try {
      this.validateRequired(data, ['query', 'userId']);
      
      // TODO: Implement actual note search logic
      // const notes = await this.noteService.search(data.query, data.userId);
      
      // Placeholder response
      return {
        notes: [
          {
            id: 'note_search_1',
            title: 'Matching Note',
            content: `Content containing query: ${data.query}`,
            userId: data.userId,
            createdAt: '2024-01-01T00:00:00Z',
            updatedAt: '2024-01-01T00:00:00Z',
          },
        ],
        totalCount: 1,
        query: data.query,
      };
    } catch (error) {
      this.handleError(error, 'SearchNotes');
    }
  }
}